@@ -1,0 +1,3 @@
+DesignMCPModApp <- function(){
+  browseURL("https://huisophiesunrshiny.shinyapps.io/designmcpmod/")
+}
